MGMT-7197: Implementing cluster's installation progress bar in BE.
The progress bar is currently implemented in the UI and should move to
BE. It will also allow other APIs (like kube-api) to use that feature.
